--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="4dp"
             app:srcCompat="@drawable/ic_my_location_green_24dp" />
@@ -37,44 +38,47 @@
 
             <CheckBox
                 android:id="@+id/location_permission_checkbox"
-                android:onClick="onLocationPermissionClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="8dp"
-                />
+                android:onClick="onLocationPermissionClicked"
+                android:paddingLeft="8dp" />
 
         </RelativeLayout>
     </LinearLayout>
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="4dp"
-            android:paddingRight="8dp"
-            android:paddingTop="4dp"
-            app:srcCompat="@drawable/ic_public_green_24dp" />
-
-        <Switch
-            android:id="@+id/enable_switch2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:text="Enable Stalking"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-           </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+            android:paddingRight="8dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="4dp"
+                app:srcCompat="@drawable/ic_public_green_24dp" />
+
+            <Switch
+                android:id="@+id/enable_switch2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:text="Enable Stalking"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/places_list_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" />
 </LinearLayout>
 
 <LinearLayout
@@ -109,8 +113,10 @@ android:orientation="vertical"
         android:layout_margin="16dp"
         android:contentDescription="Add new location"
         android:elevation="6dp"
-        android:foreground="@android:drawable/ic_input_add"
+        android:foreground="@drawable/ic_add_circle_green_24dp"
         android:onClick="onAddPlaceButtonClicked"
+        app:backgroundTint="@color/TextOnDark"
+        app:backgroundTintMode="add"
         app:fabSize="normal"
         app:pressedTranslationZ="12dp" />
 
