--- a/app/src/main/res/layout/contacts.xml
+++ b/app/src/main/res/layout/contacts.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/add_fab_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_button"
+        android:contentDescription="@string/add_new_contact"
+        android:elevation="6dp"
+        android:onClick="onAddContactButtonClicked"
+        android:text="@string/add_new_contact"
+        android:visibility="visible" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_list_recycler_view"
-        android:layout_gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_fab_contact"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_margin="16dp"
-        android:contentDescription="@string/add_new_contact"
-        android:elevation="6dp"
-        android:foreground="@drawable/ic_add_circle_green_24dp"
-        android:onClick="onAddContactButtonClicked"
-        android:visibility="visible"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:fabSize="normal"
-        app:pressedTranslationZ="12dp" />
+        android:layout_gravity="top"
+        android:layout_margin="8dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
