--- a/app/src/main/res/layout/handy_rules.xml
+++ b/app/src/main/res/layout/handy_rules.xml
@@ -25,13 +25,13 @@
                 android:paddingBottom="4dp"
                 android:paddingRight="8dp"
                 android:paddingTop="4dp"
-                app:srcCompat="@drawable/ic_sms_green_24dp" />
+                app:srcCompat="@drawable/ic_volume_up_green_24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/sms_permission"
+                android:text="@string/sound_permission"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black" />
 
@@ -40,33 +40,73 @@
                 android:layout_height="match_parent">
 
                 <CheckBox
-                    android:id="@+id/sms_permission_checkbox"
+                    android:id="@+id/sound_permission_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:onClick="onSMSPermissionClicked" />
+                    android:onClick="onSoundPermissionClicked" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingBottom="4dp"
+                android:paddingRight="8dp"
+                android:paddingTop="4dp"
+                app:srcCompat="@drawable/ic_wifi_green_24dp"
+                android:paddingEnd="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="WiFi Permission"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@android:color/black" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <CheckBox
+                    android:id="@+id/wifi_permission_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:onClick="onWifiPermissionClicked" />
 
             </RelativeLayout>
         </LinearLayout>
 
         <Button
-            android:id="@+id/add_fab_sendrule"
+            android:id="@+id/add_handyrule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_button"
             android:contentDescription="@string/add_new_contact"
-            android:elevation="6dp"
             android:onClick="onAddSendRulesButtonClicked"
-            android:text="New Rule" />
+            android:text="@string/new_rule" />
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/sendrules_list_recycler_view"
+            android:id="@+id/handyrules_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
