--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:layout_gravity="top">
 
-    <LinearLayout
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -74,11 +74,30 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
         </LinearLayout>
 
+
+        <Button
+            android:id="@+id/add_fab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_button"
+            android:contentDescription="Add new location"
+            android:onClick="onAddPlaceButtonClicked"
+            android:text="@string/add_new_location"
+            app:fabSize="normal"
+            app:pressedTranslationZ="12dp" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/places_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp" />
+            android:layout_margin="8dp" >
+
+
+        </android.support.v7.widget.RecyclerView>
+
+
 </LinearLayout>
 
 <LinearLayout
@@ -104,20 +123,5 @@ android:orientation="vertical"
     android:text="@string/policies_privacy"
     android:textAlignment="center" />
 </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_margin="16dp"
-        android:contentDescription="Add new location"
-        android:elevation="6dp"
-        android:foreground="@drawable/ic_add_circle_green_24dp"
-        android:onClick="onAddPlaceButtonClicked"
-        app:backgroundTint="@color/TextOnDark"
-        app:backgroundTintMode="add"
-        app:fabSize="normal"
-        app:pressedTranslationZ="12dp" />
 
 </android.support.design.widget.CoordinatorLayout>
