--- a/app/src/main/res/layout/place_name_dialog.xml
+++ b/app/src/main/res/layout/place_name_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginTop="16dp"
         android:hint="@string/enter_name"
+        android:maxLength="40"
         android:inputType="text" />
 
     <TextView
