--- a/app/src/main/res/layout-v21/send_rules.xml
+++ b/app/src/main/res/layout-v21/send_rules.xml
@@ -25,15 +25,14 @@
                 android:paddingBottom="4dp"
                 android:paddingRight="8dp"
                 android:paddingTop="4dp"
-                android:contentDescription="@string/volume_icon"
-                app:srcCompat="@drawable/ic_volume_up_green_24dp"
-                android:paddingEnd="8dp" />
+                android:contentDescription="@string/sms_icon"
+                app:srcCompat="@drawable/ic_sms_green_24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/sound_permission"
+                android:text="@string/sms_permission"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black" />
 
@@ -42,56 +41,14 @@
                 android:layout_height="match_parent">
 
                 <CheckBox
-                    android:id="@+id/sound_permission_checkbox"
+                    android:id="@+id/sms_permission_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:onClick="onSoundPermissionClicked" />
-
-            </RelativeLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingBottom="4dp"
-                android:paddingRight="8dp"
-                android:paddingTop="4dp"
-                app:srcCompat="@drawable/ic_wifi_green_24dp"
-                android:contentDescription="@string/wifi_icon"
-                android:paddingEnd="8dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/wifi_permission"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <CheckBox
-                    android:id="@+id/wifi_permission_checkbox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:onClick="onWifiPermissionClicked" />
+                    android:onClick="onSMSPermissionClicked" />
 
             </RelativeLayout>
         </LinearLayout>
@@ -103,12 +60,13 @@
             android:layout_margin="16dp"
             android:background="@drawable/rounded_button"
             android:contentDescription="@string/add_new_contact"
+            android:elevation="6dp"
             android:onClick="onAddSendRulesButtonClicked"
-            android:text="@string/new_rule" />
+            android:text="New Rule" />
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/handyrules_list_recycler_view"
+            android:id="@+id/sendrules_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
