--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/place_icon"
         android:layout_width="wrap_content"
-        android:contentDescription="Place icon"
+        android:contentDescription="@string/place_icon"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -19,7 +19,6 @@
         app:srcCompat="@drawable/ic_place_green_24dp" />
 
     <LinearLayout
-        android:id="@+id/place_info_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -37,14 +36,12 @@
             android:id="@+id/place_name"
             android:textStyle="bold"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/place_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <ImageView
@@ -58,5 +55,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/delete_icon"
         app:srcCompat="@android:drawable/ic_delete" />
 </android.support.constraint.ConstraintLayout>
