--- a/app/src/main/res/layout/place_name_dialog.xml
+++ b/app/src/main/res/layout/place_name_dialog.xml
@@ -15,7 +15,9 @@
         android:layout_marginTop="16dp"
         android:hint="@string/enter_name"
         android:maxLength="40"
-        android:inputType="text" />
+        android:inputType="text"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp" />
 
     <TextView
         android:id="@+id/address_textView"
@@ -25,5 +27,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp" />
 </LinearLayout>
