--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -22,13 +22,14 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingTop="4dp"
+            android:contentDescription="@string/location_icon"
             app:srcCompat="@drawable/ic_my_location_green_24dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Location Permission"
+            android:text="@string/location_permission"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black" />
 
@@ -43,7 +44,10 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="8dp"
                 android:onClick="onLocationPermissionClicked"
-                android:paddingLeft="8dp" />
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="8dp" />
 
         </RelativeLayout>
     </LinearLayout>
@@ -54,7 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
-            android:paddingRight="8dp">
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -63,6 +68,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:paddingTop="4dp"
+                android:contentDescription="@string/geofencing_icon"
                 app:srcCompat="@drawable/ic_public_green_24dp" />
 
             <Switch
@@ -70,23 +76,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:text="Enable Stalking"
+                android:text="@string/enable_stalking"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
         </LinearLayout>
 
 
         <Button
-            android:id="@+id/add_fab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_button"
-            android:contentDescription="Add new location"
+            android:contentDescription="@string/add_new_location"
             android:onClick="onAddPlaceButtonClicked"
-            android:text="@string/add_new_location"
-            app:fabSize="normal"
-            app:pressedTranslationZ="12dp" />
+            android:text="@string/add_new_location" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/places_list_recycler_view"
@@ -113,6 +116,7 @@ android:orientation="vertical"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:padding="4dp"
+    android:contentDescription="@string/powered_by_google"
     android:src="@drawable/powered_by_google_light" />
 
 <TextView
