--- a/app/src/main/res/layout/stalker_widget.xml
+++ b/app/src/main/res/layout/stalker_widget.xml
@@ -6,8 +6,6 @@
     android:orientation="vertical">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/ingredients_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -15,19 +13,29 @@
         android:verticalSpacing="4dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/appwidget_image"
-            android:contentDescription="Image for widget"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="2dp"
+            android:verticalSpacing="4dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/appwidget_text"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_new_rule"
-            style="@style/myDetailTitleStyle"
-            android:layout_margin="8dp"/>
+            android:contentDescription="@string/app_image"
+            android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/appwidget_text"
+                style="@style/myDetailTitleStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="24dp"
+                android:text="@string/go_to_app" />
+
+        </LinearLayout>
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
