--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="TextView"
         android:textColor="@color/TextOnLight"
         android:textSize="16sp" />
 
@@ -27,8 +26,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
             android:background="@drawable/rounded_button"
-            android:text="Call" />
+            android:text="@string/call" />
 
 
         <Button
@@ -37,8 +39,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
             android:background="@drawable/rounded_button"
-            android:text="Send SMS" />
+            android:text="@string/send_sms" />
 
         <Button
             android:id="@+id/wapp_widget_button"
@@ -47,7 +52,10 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/rounded_button"
-            android:text="WhatsApp" />
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
+            android:text="@string/whatsapp" />
     </LinearLayout>
 
 </LinearLayout>
