--- a/app/src/main/res/xml-v17/stalker_widget_info.xml
+++ b/app/src/main/res/xml-v17/stalker_widget_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:initialKeyguardLayout="@layout/stalker_widget"
     android:initialLayout="@layout/stalker_widget"
     android:minHeight="40dp"
     android:minWidth="80dp"
@@ -7,4 +8,5 @@
     android:minResizeWidth="80dp"
     android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000" />
+    android:updatePeriodMillis="86400000"
+    android:widgetCategory="home_screen"/>
