--- a/app/src/main/res/layout-v21/send_rules.xml
+++ b/app/src/main/res/layout-v21/send_rules.xml
@@ -23,7 +23,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingBottom="4dp"
-                android:paddingRight="8dp"
+                android:paddingEnd="8dp"
+                android:paddingStart="2dp"
                 android:paddingTop="4dp"
                 android:contentDescription="@string/sms_icon"
                 app:srcCompat="@drawable/ic_sms_green_24dp" />
@@ -45,9 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
                     android:onClick="onSMSPermissionClicked" />
 
             </RelativeLayout>
@@ -62,7 +61,7 @@
             android:contentDescription="@string/add_new_contact"
             android:elevation="6dp"
             android:onClick="onAddSendRulesButtonClicked"
-            android:text="New Rule" />
+            android:text="@string/new_rule" />
 
 
         <android.support.v7.widget.RecyclerView
