--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -4,7 +4,7 @@
 <item android:state_pressed="true">
 
     <shape android:shape="rectangle">
-        <gradient android:angle="225" android:endColor="@color/colorAccent" android:startColor="@color/colorPrimary" />
+        <gradient android:angle="225" android:endColor="@color/colorAccent" android:startColor="#2e7d32" />
         <corners android:radius="10dp" />
         <stroke android:width="2dp" android:color="@color/colorPrimaryDark" />
     </shape>
