--- a/app/src/main/res/layout/new_stalking_rule.xml
+++ b/app/src/main/res/layout/new_stalking_rule.xml
@@ -36,6 +36,7 @@
 
             <Spinner
                 android:id="@+id/name_spinner"
+                style="@style/spinnerItemStyle2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -83,6 +84,7 @@
             <Spinner
                 android:id="@+id/departure_spinner"
                 android:layout_width="0dp"
+                style="@style/spinnerItemStyle2"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
@@ -129,6 +131,7 @@
                 <Spinner
                     android:id="@+id/name_departure_spinner"
                     android:layout_width="0dp"
+                    style="@style/spinnerItemStyle2"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
@@ -155,6 +158,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    style="@style/spinnerItemStyle2"
                     android:gravity="end"
                     android:minHeight="12dp" />
             </LinearLayout>
@@ -201,6 +205,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                style="@style/spinnerItemStyle2"
                 android:gravity="end"
                 android:minHeight="12dp" />
 
@@ -232,6 +237,7 @@
         <Spinner
             android:id="@+id/place_spinner"
             android:layout_width="match_parent"
+            style="@style/spinnerItemStyle2"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
