feat: main page layout

--- a/app/src/main/res/layout/send_rules.xml
+++ b/app/src/main/res/layout/send_rules.xml
@@ -54,6 +54,22 @@
             </RelativeLayout>
         </LinearLayout>
 
+
+        <Button
+            style="@style/myButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="44dp"
+            android:layout_marginRight="44dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/rounded_button"
+            android:maxWidth="@dimen/button_width"
+            android:onClick="onContactsButtonClicked"
+            android:text="@string/contacts" />
+
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
