--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -4,8 +4,8 @@
 <item android:state_pressed="true">
 
     <shape android:shape="rectangle">
-        <gradient android:angle="225" android:endColor="@color/colorAccent" android:startColor="#2e7d32" />
-        <corners android:radius="10dp" />
+        <gradient android:angle="225" android:endColor="@color/colorPrimary" android:startColor="@color/colorPrimaryDark" />
+        <corners android:radius="2dp" />
         <stroke android:width="2dp" android:color="@color/colorPrimaryDark" />
     </shape>
 
@@ -13,8 +13,8 @@
 
 <item>
     <shape android:shape="rectangle">
-        <gradient android:angle="225" android:endColor="@color/colorAccent" android:startColor="@color/colorAccent" />
-        <corners android:radius="10dp" />
+        <gradient android:angle="225" android:endColor="@color/colorPrimaryDark" android:startColor="@color/colorPrimaryDark" />
+        <corners android:radius="2dp" />
         <stroke android:width="2dp" android:color="@color/colorPrimaryDark" />
     </shape>
 
