--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,79 +10,103 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:paddingRight="8dp"
+        android:paddingEnd="8dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
+            android:contentDescription="@string/geofencing_icon"
+            app:srcCompat="@drawable/ic_public_green_24dp" />
+
+        <Switch
+            android:id="@+id/enable_switch2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/enable_stalking"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="48dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         ads:layout_constraintBottom_toBottomOf="parent"
-        ads:layout_constraintBottom_toTopOf="@+id/adView"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        />
 
-        <Button
-            style="@style/myButtonStyle"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_weight="2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/rounded_button"
-            android:maxWidth="@dimen/button_width"
-            android:onClick="onPlaceButtonClicked"
-            android:text="@string/my_places" />
+            android:orientation="vertical"
+            >
+
+            <Button
+                style="@style/myButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="44dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="44dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/rounded_button"
+                android:fontFamily="sans-serif"
+                android:maxWidth="@dimen/button_width"
+                android:onClick="onPlaceButtonClicked"
+                android:text="@string/my_places"
+                android:textAllCaps="true"
+                android:textColor="@android:color/primary_text_dark"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
 
+            <Button
+                style="@style/myButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="44dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="44dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/rounded_button"
+                android:fontFamily="sans-serif"
+                android:maxWidth="@dimen/button_width"
+                android:onClick="onRulesButtonClicked"
+                android:text="@string/my_rules"
+                android:textColor="@android:color/primary_text_dark"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-        <Button
-            style="@style/myButtonStyle"
-            android:layout_width="match_parent"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/rounded_button"
-            android:maxWidth="@dimen/button_width"
-            android:onClick="onContactsButtonClicked"
-            android:text="@string/contacts" />
-
-        <Button
-            style="@style/myButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/rounded_button"
-            android:maxWidth="@dimen/button_width"
-            android:onClick="onRulesButtonClicked"
-            android:text="@string/my_rules" />
+            />
 
     </LinearLayout>
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
